<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CS2340-Water-s-Warriors</string>
    <string name="login_button">Login</string>
    <string name="front_message">Welcome</string>
    <string name="register_button">Register</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="title_activity_sucess">Success</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="blank"></string>
    <string name="money_pic_decription">MoneyPicture</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel_text">Cancel</string>
    <string name="title_activity_add_acount">AddAcountActivity</string>
    <string name="title_activity_user_page">UserPageActivity</string>
    <string name="logout_text">Logout</string>
    <string name="add_account">Add Account</string>
    <string name="beck_button">Back</string>
    <string name="go_to_text">Go To</string>
    <string name="create_please_text">Create an account</string>
    <string name="title_activity_account">Account</string>
    <string name="make_transaction">Make Transaction</string>
    <string name="title_activity_transaction">TransactionActivity</string>
    <string name="submit_text">Submit</string>
    <string name="transation_type">Transaction Type</string>
    <string name="amount">Amount</string>
    <string name="source">Source</string>
    <string name="date">Date</string>
    <string name="deposit">Deposit</string>
    <string name="withdrawal">"Withdrawal "</string>
    <string name="title_activity_spending_report">SpendingReport</string>
    <string name="title_activity_spending_report_parameters">SpendingReportParameters</string>
    <string name="date_of_transaction">Date of Transaction</string>
    <string name="account_balance_">"Balance: "</string>
    <string name="account_balance">"Balance: "</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="catagory">Catagory</string>
    <string name="clothing">Clothing</string>
    <string name="food">Food</string>
    <string name="other">Other</string>
    <string name="Report_Summary">Report Summary</string>
    <string name="create_spending_report">Create Spending Report</string>
    <string name="title_activity_tetris">TetrisActivity</string>
    <string name="title_activity_tetris_view">TetrisViewActivity</string>
<<<<<<< HEAD
    <string name="email_text">Email</string>
=======
    <string name="graph">Graph</string>
    <string name="view_pie_graph">View Pi Graph</string>
    <string name="title_activity_pie_graph">PieGraphActivity</string>
>>>>>>> origin

</resources>
