<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccountActivity" >

    <Button
        android:id="@+id/back_to_userpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/make_transaction"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="goBack"
        android:text="@string/beck_button" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/account_balance"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/amount_in_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/blank"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/create_spending_report_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/back_to_userpage"
        android:layout_alignLeft="@+id/back_to_userpage"
        android:layout_alignRight="@+id/back_to_userpage"
        android:onClick="createSpendingReport"
        android:text="Create Spending Report" />

    <Button
        android:id="@+id/make_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/create_spending_report_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="makeTransaction"
        android:text="@string/make_transaction" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/recent_activity"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/transaction_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/make_transaction"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/make_transaction"
        android:layout_below="@+id/textView2"
        android:orientation="vertical" >

    </LinearLayout>
   
</RelativeLayout>
